--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <header>
         <div class="header-content">
             <div class="caroussel">
-                <img src="img/background-home.png" alt="">
+                <img src="img/background-home.png" alt="" id="background">
                 <h1>SLARAVEL</h1>
                 <div class="previous">
-                    <div class="previous-button"></div>
-                    <div class="previous-button"></div>
-                    <div class="previous-button"></div>
+                    <div class="dot" id="first-image"></div>
+                    <div class="dot" id="second-image"></div>
+                    <div class="dot" id="third-image"></div>
                 </div>
             </div>
             <div class="product-types">
