apenas trocando cor do dot quando estiver na imagem

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <span><a href="#" id="unhas">UNHAS</a></span>
 
                 <div class="search-area">
-                    <input class="input-field" type="text" placeholder="marca, produto" id="brand" list="brand-list">
+                    <input class="input-field" type="text" placeholder="marcas" id="brand" list="brand-list">
                     <datalist id="brand-list"></datalist>
                     <button id="search"><img src="./img/search.png" class="icon" alt=""></button>
                 </div>
@@ -45,7 +45,7 @@
 
     <section id="products">
         <div id="products-content">
-            
+
         </div>
     </section>
 
