--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="./js/main.js" defer></script>
     <title>SLARAVEL MAKEUP</title>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
 </head>
 
 <body>
@@ -57,5 +60,7 @@
     </footer>
 
 </body>
+
+<div class="se-pre-con"></div>
 
 </html>
